# apiColoringCreator

./: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
kafka_settings/: consumer.py  producer.py
services/: generator.py  image_utils.py
shared/: utils.py
stable_diffusion/: pipeline.py
