[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
fastapi = "^0.115.8"
black = "^25.1.0"
deep-translator = "^1.11.4"
opencv-python = "^4.11.0.86"
torch = "^2.7.0"
diffusers = "^0.33.1"
transformers = "^4.51.3"
accelerate = "^1.7.0"
aiokafka = "^0.12.0"
asyncio = "^3.4.3"
